--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="TBinaryGap\TBinaryGap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TOddOccurrenceInArray\TOddOccurrenceInArray.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
