--- a/Codility.Training/Codility.Training.csproj
+++ b/Codility.Training/Codility.Training.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CyclicRotation\CyclicRotation.cs" />
     <Compile Include="OddOccurrencesInArray\OddOccurrenceInArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TapeEquilibrium\TapeEquilibrium.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -55,6 +56,7 @@
     <Content Include="BinaryGap\BinaryGap.png" />
     <Content Include="CyclicRotation\CyclicRotation.png" />
     <Content Include="OddOccurrencesInArray\OddOccurrencesInArray.png" />
+    <Content Include="TapeEquilibrium\TapeEquilibrium.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
