--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCyclicRotation\TCyclicRotation.cs" />
     <Compile Include="TOddOccurrenceInArray\TOddOccurrenceInArray.cs" />
+    <Compile Include="TTapeEquilibrium\TTapeEquilibrium.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
