--- a/Codility.Training/Codility.Training.csproj
+++ b/Codility.Training/Codility.Training.csproj
@@ -42,21 +42,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryGap\BinaryGap.cs" />
-    <Compile Include="Codility.cs" />
-    <Compile Include="CyclicRotation\CyclicRotation.cs" />
-    <Compile Include="OddOccurrencesInArray\OddOccurrenceInArray.cs" />
+    <Compile Include="Lesson1\Tasks\BinaryGap.cs" />
+    <Compile Include="Startup.cs" />
+    <Compile Include="Lesson2\Tasks\CyclicRotation.cs" />
+    <Compile Include="Lesson2\Tasks\OddOccurrenceInArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TapeEquilibrium\TapeEquilibrium.cs" />
+    <Compile Include="Lesson3\Tasks\TapeEquilibrium.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Lesson1\Iterations.pdf" />
+    <None Include="Lesson2\Arrays.pdf" />
+    <None Include="Lesson3\TimeComplexity.pdf" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BinaryGap\BinaryGap.png" />
-    <Content Include="CyclicRotation\CyclicRotation.png" />
-    <Content Include="OddOccurrencesInArray\OddOccurrencesInArray.png" />
-    <Content Include="TapeEquilibrium\TapeEquilibrium.png" />
+    <Content Include="Lesson1\Tasks\BinaryGap.png" />
+    <Content Include="Lesson2\Tasks\CyclicRotation.png" />
+    <Content Include="Lesson2\Tasks\OddOccurrencesInArray.png" />
+    <Content Include="Lesson3\Tasks\TapeEquilibrium.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
