Solving problem: FrogJmp

--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Lesson2\TCyclicRotation.cs" />
     <Compile Include="Lesson2\TOddOccurrenceInArray.cs" />
     <Compile Include="Lesson3\TTapeEquilibrium.cs" />
+    <Compile Include="Lesson3\TFrogJmp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
