--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Lesson2\TOddOccurrenceInArray.cs" />
     <Compile Include="Lesson3\TTapeEquilibrium.cs" />
     <Compile Include="Lesson3\TFrogJmp.cs" />
+    <Compile Include="Lesson3\TPermMissingElem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
