--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Lesson3\TTapeEquilibrium.cs" />
     <Compile Include="Lesson3\TFrogJmp.cs" />
     <Compile Include="Lesson3\TPermMissingElem.cs" />
+    <Compile Include="Lesson4\TFrogRiverOne.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -62,6 +63,9 @@
       <Project>{4d9e1c50-9745-4f4d-85db-1675ee3a081a}</Project>
       <Name>Codility.Training</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lesson4\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
