--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Lesson3\TFrogJmp.cs" />
     <Compile Include="Lesson3\TPermMissingElem.cs" />
     <Compile Include="Lesson4\TFrogRiverOne.cs" />
+    <Compile Include="Lesson4\TPermCheck.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
