--- a/Codility.Play/Codility.Play.csproj
+++ b/Codility.Play/Codility.Play.csproj
@@ -37,6 +37,7 @@
     <ProjectReference Include="..\Codility.Training\Codility.Training.csproj">
       <Project>{4D9E1C50-9745-4F4D-85DB-1675EE3A081A}</Project>
       <Name>Codility.Training</Name>
+      <ReferenceSourceTarget>ProjectReference</ReferenceSourceTarget>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
