--- a/Codility.UnitTest/Codility.UnitTest.csproj
+++ b/Codility.UnitTest/Codility.UnitTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Lesson4\TFrogRiverOne.cs" />
     <Compile Include="Lesson4\TPermCheck.cs" />
     <Compile Include="Lesson4\TMissingInteger.cs" />
+    <Compile Include="Lesson4\TMaxCounters.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
